--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "weez/common",
+    "name": "app/common",
     "description": "Common Lib for weezevent",
     "authors": [
         {
@@ -26,7 +26,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Weez\\": "src"
+            "App\\": "src"
         }
     },
     "autoload-dev": {
@@ -34,10 +34,10 @@
             "": "demo/"
         },
         "psr-4": {
-            "Weez\\Model\\": "demo/models"
+            "App\\Model\\": "demo/models"
         }
     },
     "bin": [
-        "weezcmd"
+        "appcmd"
     ]
 }
