--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,20 @@
         }
     ],
     "require": {
-        "symfony/console": "~2.6",
-        "symfony/filesystem": "~2.6",
-        "symfony/finder": "~2.6",
+        "symfony/console": "~3.1",
+        "symfony/filesystem": "~3.1",
+        "symfony/finder": "~3.1",
         "zendframework/zend-db": "~2.4",
         "zendframework/zend-inputfilter": "~2.4",
-        "zendframework/zend-code": "~2.4",
-        "pimple/pimple": "3.0.0"
+        "zendframework/zend-code": "~3.1",
+        "pimple/pimple": "~3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "v1.6.0",
         "mockery/mockery": "^0.9.5",
-        "phpunit/phpunit": "^5.4",
-        "phpspec/phpspec": "^2.5",
+        "phpunit/phpunit": "^6.1",
         "monolog/monolog": "~1.7",
-        "friendsofphp/php-cs-fixer": "v2.0.0-alpha"
+        "friendsofphp/php-cs-fixer": "v2.*"
     },
     "autoload": {
         "psr-4": {
