--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
     app:
-      image: webdevops/php-dev:ubuntu-16.10
+      image: webdevops/php-dev:alpine-php7
       volumes:
         - "./:/app"
       working_dir: "/app"
