--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "zendframework/zend-db": "~2.4",
         "zendframework/zend-inputfilter": "~2.4",
         "zendframework/zend-code": "~3.1",
-        "pimple/pimple": "~3.0"
+        "pimple/pimple": "~3.0",
+        "defuse/php-encryption": "^2.1"
     },
     "require-dev": {
         "fzaninotto/faker": "v1.6.0",
@@ -33,7 +34,8 @@
             "": "demo/"
         },
         "psr-4": {
-            "App\\Model\\": "demo/models"
+            "App\\Model\\": "demo/models",
+            "Tests\\App\\": "tests/src"
         }
     },
     "bin": [
