--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "zendframework/zend-inputfilter": "~2.4",
         "zendframework/zend-code": "~3.1",
         "pimple/pimple": "~3.0",
-        "defuse/php-encryption": "^2.1"
+        "defuse/php-encryption": "^2.1",
+        "symfony/yaml": "^4.0"
     },
     "require-dev": {
         "fzaninotto/faker": "v1.6.0",
