--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "zendframework/zend-code": "~3.1",
         "pimple/pimple": "~3.0",
         "defuse/php-encryption": "^2.1",
-        "symfony/yaml": "^4.0"
+        "symfony/yaml": "v3.4.4"
     },
     "require-dev": {
         "fzaninotto/faker": "v1.6.0",
