--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,18 @@
         }
     ],
     "require": {
-        "symfony/console": "~3.1",
-        "symfony/filesystem": "~3.1",
-        "symfony/finder": "~3.1",
-        "zendframework/zend-db": "~2.4",
-        "zendframework/zend-inputfilter": "~2.4",
-        "zendframework/zend-code": "~3.1",
+        "symfony/console": "3.4.*",
+        "symfony/filesystem": "3.4.*",
+        "symfony/finder": "3.4.*",
+        "zendframework/zend-db": "~2.9",
+        "zendframework/zend-inputfilter": "~2.8",
+        "zendframework/zend-code": "~3.3",
         "pimple/pimple": "~3.0",
         "defuse/php-encryption": "^2.1",
-        "symfony/yaml": "v3.4.4"
+        "symfony/yaml": "3.4.*"
     },
     "require-dev": {
-        "fzaninotto/faker": "v1.6.0",
+        "fzaninotto/faker": "dev-master",
         "mockery/mockery": "^0.9.5",
         "phpunit/phpunit": "^6.1",
         "monolog/monolog": "~1.7",
