--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "Common Lib",
     "authors": [
         {
-            "name": "Teddy Dona",
-            "email": "teddy.dona@gmail.com"
+            "name": "Dev",
+            "email": "dev@exelcia-it.com"
         }
     ],
     "require": {
