--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "symfony/finder": "~3.1",
         "zendframework/zend-db": "~2.4",
         "zendframework/zend-inputfilter": "~2.4",
-        "zendframework/zend-code": "~3.1",
+        "zendframework/zend-code": "3.1.0",
         "pimple/pimple": "~3.0",
         "defuse/php-encryption": "^2.1",
         "symfony/yaml": "v3.4.4"
