--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "authors": [
         {
             "name": "Dev",
-            "email": "dev@exelcia-it.com"
+            "email": "dev@ted.com"
         }
     ],
     "require": {
