--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "Common Lib",
     "authors": [
         {
-            "name": "Dev",
-            "email": "dev@ted.com"
+            "name": "Teddy Dona",
+            "email": "teddy.dona@gmail.com"
         }
     ],
     "require": {
@@ -13,7 +13,7 @@
         "symfony/finder": "~3.1",
         "zendframework/zend-db": "~2.4",
         "zendframework/zend-inputfilter": "~2.4",
-        "zendframework/zend-code": "3.1.0",
+        "zendframework/zend-code": "~3.1",
         "pimple/pimple": "~3.0",
         "defuse/php-encryption": "^2.1",
         "symfony/yaml": "v3.4.4"
@@ -21,7 +21,7 @@
     "require-dev": {
         "fzaninotto/faker": "v1.6.0",
         "mockery/mockery": "^0.9.5",
-        "phpunit/phpunit": "^6.1",
+        "phpunit/phpunit": "^5.0",
         "monolog/monolog": "~1.7",
         "friendsofphp/php-cs-fixer": "v2.*"
     },
