--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "symfony/finder": "3.4.*",
         "zendframework/zend-db": "~2.9",
         "zendframework/zend-inputfilter": "~2.8",
-        "zendframework/zend-code": "3.1.0",
+        "zendframework/zend-code": "^3.3",
         "pimple/pimple": "~3.0",
         "defuse/php-encryption": "^2.1",
         "symfony/yaml": "3.4.*"
