--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src"
+            "App\\": "src/App/"
         }
     },
     "autoload-dev": {
