--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
         "symfony/console": "3.4.*",
         "symfony/filesystem": "3.4.*",
         "symfony/finder": "3.4.*",
-        "zendframework/zend-db": "~2.9",
-        "zendframework/zend-inputfilter": "~2.8",
-        "zendframework/zend-code": "^3.3",
         "pimple/pimple": "~3.0",
         "defuse/php-encryption": "^2.1",
-        "symfony/yaml": "3.4.*"
+        "symfony/yaml": "3.4.*",
+        "laminas/laminas-db": "^2.11",
+        "laminas/laminas-inputfilter": "^2.10",
+        "laminas/laminas-code": "^3.4"
     },
     "require-dev": {
         "fzaninotto/faker": "v1.6.0",
