--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
     app:
-      image: webdevops/php-dev:alpine-php7
+      image: webdevops/php-dev:7.4-alpine
       volumes:
         - "./:/app"
       working_dir: "/app"
@@ -30,7 +30,7 @@ services:
       expose:
         - '27017'
       environment:
-        MONGODB_HOST: "common"
+        MONGODB_HOST: "mongodb"
         MONGODB_USERNAME: "common"
         MONGODB_PASSWORD: "common"
         MONGODB_DATABASE: "common"
