--- a/composer.json
+++ b/composer.json
@@ -8,23 +8,21 @@
         }
     ],
     "require": {
-        "symfony/console": "^5.2",
-        "symfony/filesystem": "^5.2",
-        "symfony/finder": "^5.2",
-        "pimple/pimple": "~3.0",
+        "symfony/console": "^6.0",
+        "symfony/filesystem": "^6.0",
+        "symfony/finder": "^6.0",
+        "pimple/pimple": "~3.5",
         "defuse/php-encryption": "^2.3",
-        "symfony/yaml": "^5.2",
-        "laminas/laminas-db": "^2.12",
-        "laminas/laminas-inputfilter": "^2.12",
-        "laminas/laminas-code": "^4.3",
+        "symfony/yaml": "^6.0",
+        "laminas/laminas-db": "^2.15",
+        "laminas/laminas-inputfilter": "^2.13",
+        "laminas/laminas-code": "^4.5",
         "mongodb/mongodb": "^1.8"
     },
     "require-dev": {
-        "fzaninotto/faker": "v1.6.0",
-        "mockery/mockery": "^0.9.5",
-        "phpunit/phpunit": "^6.1",
-        "monolog/monolog": "~1.7",
-        "friendsofphp/php-cs-fixer": "v2.*"
+        "phpunit/phpunit": "^9.5",
+        "monolog/monolog": "~2.5",
+        "friendsofphp/php-cs-fixer": "^3.8"
     },
     "autoload": {
         "psr-4": {
