--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: "3"
 services:
     app:
-      image: webdevops/php-dev:7.4-alpine
+      image: webdevops/php:8.2
       volumes:
         - "./:/app"
       working_dir: "/app"
@@ -34,3 +33,4 @@ services:
         MONGODB_USERNAME: "common"
         MONGODB_PASSWORD: "common"
         MONGODB_DATABASE: "common"
+        MONGODB_ROOT_PASSWORD: "common"
